--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation 'io.qameta.allure:allure-selenide:2.21.0'
     testImplementation 'org.slf4j:slf4j-simple:1.7.32'
     testImplementation 'org.testng:testng:7.1.0'
+    testImplementation "io.rest-assured:json-schema-validator:5.3.0"
 }
 
 test {
