add opti api tests

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.qameta.allure' version '2.11.2'
+    id "io.freefair.lombok" version "6.0.0-m2"
 }
 
 group 'guru.ea'
@@ -25,15 +26,25 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    testImplementation 'io.rest-assured:rest-assured:5.3.0'
-    testImplementation 'com.codeborne:selenide:6.12.3'
-    testImplementation 'io.qameta.allure:allure-selenide:2.21.0'
-    testImplementation 'org.slf4j:slf4j-simple:1.7.32'
-    testImplementation 'org.testng:testng:7.1.0'
-    testImplementation "io.rest-assured:json-schema-validator:5.3.0"
+    testImplementation (
+            'org.junit.jupiter:junit-jupiter:5.9.2',
+            'io.rest-assured:rest-assured:5.3.0',
+            'com.codeborne:selenide:6.12.3',
+            'io.qameta.allure:allure-selenide:2.21.0',
+            'org.slf4j:slf4j-simple:1.7.32',
+            'org.testng:testng:7.1.0',
+            'io.rest-assured:json-schema-validator:5.3.0',
+            'io.qameta.allure:allure-rest-assured:2.21.0',
+            'org.assertj:assertj-core:3.23.1',
+            'com.fasterxml.jackson.core:jackson-databind:2.14.1')
 }
 
 test {
     useJUnitPlatform()
+}
+
+task opti_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags("opti_test")
+    }
 }
